--- a/index.html
+++ b/index.html
@@ -212,20 +212,19 @@
     
             <div class="box">
                 <h3>contact info</h3>
-                <a href="tel:+918115585868"> <i class="fas fa-phone"></i> +91 8115585868 </a>
-                <a href="mailto: yashsrivastav8115@gmail.com"> <i class="fas fa-envelope"></i> yashsrivastav8115@gmail.com </a>
-                <a href="#"> <i class="fas fa-map"></i> Lucknow, india - 226010 </a>
+                <a href="tel:+919696606282"> <i class="fas fa-phone"></i> +91 9696606282 </a>
+                <a href="mailto: ashutoshmzp1221@gmail.com"> <i class="fas fa-envelope"></i> ashutoshmzp1221@gmailcom </a>
+                <a href="#"> <i class="fas fa-map"></i> Mirzapur, india - 231001 </a>
             </div>
     
             <div class="box">
                 <h3>follow us</h3>
-                <a href="https://www.facebook.com/yash.srivastav0"> <i class="fab fa-facebook-f"></i> facebook </a>
-                <a href="https://www.instagram.com/yash_srivastav_"> <i class="fab fa-instagram"></i> instagram </a>
-                <a href="https://www.linkedin.com/in/yash-srivastav/"> <i class="fab fa-linkedin"></i> linkedin </a>
-                <a href="https://github.com/Yash-srivastav16"> <i class="fab fa-github"></i> github </a>
+                <a href="https://www.instagram.com/i_am_ashutoshdd/"> <i class="fab fa-instagram"></i> instagram </a>
+                <a href="https://www.linkedin.com/in/ashutosh-dwivedi-163259231/"> <i class="fab fa-linkedin"></i> linkedin </a>
+                <a href="https://github.com/Ashutoshmzp1221"> <i class="fab fa-github"></i> github </a>
             </div>
         </div>
-        <div class="credit">created by <span>yash srivastav</span> | all rights reserved!</div>
+        <div class="credit">created by <span>ashutosh dwivedi</span> | all rights reserved!</div>
     </section>
     <!-- footer section ends -->
     <script src="js/script.js"></script>
